--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <li>
                             <a target="_blank"
                              href="https://www.twitch.tv/diolinux">
-                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/a6bba8f8-62b2-4b0b-830c-a89cb7badcfc-profile_image-150x150.png" alt="">
+                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/79f816aa-e2fb-48e8-9d65-d4d93a933aa1-profile_image-150x150.png" alt="Dio linux">
                             </a>
                         </li>
 
